--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
-server.port＝8008
-spring.datasource.url = jdbc:mysql://localhost:3306/notes
+spring.datasource.url = jdbc:mysql://114.215.135.153:3306/notes
 spring.datasource.username = root
-spring.datasource.password = 
+spring.datasource.password = root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.jpa.database=MYSQL
@@ -42,4 +41,6 @@ spring.redis.pool.max-idle=8
 # 连接池中的最小空闲连接
 spring.redis.pool.min-idle=0  
 # 连接超时时间（毫秒）
-spring.redis.timeout=0  
+spring.redis.timeout=0 
+
+server.port=9999
